# cpp-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  run.sh
deb/cpp-template/DEBIAN/: control
debian/: control
src/: CMakeLists.txt  main.cpp
tests/: shape_tests.cpp
